name:                reflex-starter
version:             1.2.3
synopsis:            A simple starter project for building Reflex applications with Stack
description:         This starter project aims at providing the default working setup for building up-to-date Reflex applications with Stack.
homepage:            https://github.com/yamafaktory/reflex-starter
license:             BSD3
license-file:        LICENSE
author:              Davy Duperron
maintainer:          yamafaktory@gmail.com
copyright:           2016 Davy Duperron
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable reflex-starter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  if impl(ghcjs >= 0.2.1)
    ghcjs-options:     -dedupe

  build-depends:       base
                     , reflex >= 0.4.0
                     , reflex-dom >= 0.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/yamafaktory/reflex-starter
